feat: Add comprehensive Sentry monitoring and error tracking
- Install @sentry/nextjs for error tracking and performance monitoring
- Add Sentry configuration files (client, instrumentation)
- Create custom error boundary component with user-friendly fallback UI
- Add performance monitoring utilities for API routes and database queries
- Implement monitoring dashboard for admin users
- Add health check endpoint with system monitoring
- Update deployment configuration for Sentry integration
- Add monitoring section to VPS deployment guide
- Fix Suspense boundary issues in reset-password and verify-email pages
- Update environment configuration with Sentry variables
- Add monitoring scripts to package.json

Features:
- Real-time error tracking and alerting
- Performance monitoring with transaction tracing
- User context tracking and session replays
- Custom business metrics and feature usage analytics
- Admin monitoring dashboard in main app
- Production-ready error handling and reporting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,11 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        SENTRY_ORG: ${SENTRY_ORG}
+        SENTRY_PROJECT: ${SENTRY_PROJECT}
+        SENTRY_AUTH_TOKEN: ${SENTRY_AUTH_TOKEN}
+        NEXT_PUBLIC_SENTRY_DSN: ${NEXT_PUBLIC_SENTRY_DSN}
     container_name: realestate_app
     restart: unless-stopped
     environment:
@@ -51,6 +56,13 @@ services:
       EMAIL_USER: ${EMAIL_USER}
       EMAIL_PASS: ${EMAIL_PASS}
       EMAIL_FROM: ${EMAIL_FROM}
+      # Sentry Configuration
+      SENTRY_DSN: ${SENTRY_DSN}
+      NEXT_PUBLIC_SENTRY_DSN: ${NEXT_PUBLIC_SENTRY_DSN}
+      SENTRY_ORG: ${SENTRY_ORG}
+      SENTRY_PROJECT: ${SENTRY_PROJECT}
+      SENTRY_AUTH_TOKEN: ${SENTRY_AUTH_TOKEN}
+      SENTRY_ENVIRONMENT: ${SENTRY_ENVIRONMENT:-production}
     ports:
       - "5544:5544"
     depends_on:
