--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "docker:build": "docker build -t realestate-platform .",
     "docker:run": "docker run -p 5544:5544 realestate-platform",
     "deploy:production": "./scripts/deployment/deploy.sh production",
-    "deploy:staging": "./scripts/deployment/deploy.sh staging"
+    "deploy:staging": "./scripts/deployment/deploy.sh staging",
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org $SENTRY_ORG --project $SENTRY_PROJECT .next && sentry-cli sourcemaps upload --org $SENTRY_ORG --project $SENTRY_PROJECT .next",
+    "monitoring:check": "curl -f http://localhost:5544/api/health || exit 1"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -57,6 +59,8 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@reactuses/core": "^6.0.5",
+    "@sentry/nextjs": "^10.3.0",
+    "@sentry/profiling-node": "^10.3.0",
     "@tanstack/react-query": "^5.82.0",
     "@tanstack/react-table": "^8.21.3",
     "@types/jsonwebtoken": "^9.0.10",
